# BMAD-METHOD

./: .chrome-ws  .eslintignore  .gitignore  .kilocodemodes  .markdownlint-cli2.yaml  .next-context.json  .npmignore  .npmrc  .prettierignore  AGENTS.md  ASSESSMENT_SUMMARY.txt  BEST_PRACTICES_SUMMARY.md  BMAD-COMMANDS.md  BMAD-WORKFLOW-IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_WEB_IMPLEMENTATION.md  CNAME  COMPLETE-SETUP-SUMMARY.md  CONCEPTS-INTEGRATION.md  CONTRIBUTING.md  DEPLOY_NETLIFY.md  FEATURE-SUMMARY-v1.5.0.md  FEATURE-SUMMARY.md  GO-LIVE-SUMMARY.md  GSDMAD-ARCHITECTURE.md  INSTALL-MODULES.md  INSTALLER-FIXES-2026-02-23.md  INSTALL_WITH_TDD_FROM_GITHUB.md  INTEGRATION-NOTES.md  LINKED-PROJECTS.md  MAINTENANCE-GUIDE.md  NEXT_STEPS.md  OPENCODE_INTEGRATION_SUMMARY.md  OPTIMIZATION-CHECKLIST.md  PARTY-MODE-SYMLINK-FIX.md  PLAYWRIGHT-UTILS-INTEGRATION-PLAN.md  PR-DESCRIPTION.md  PR-STORY-PIPELINE.md  PROJECT.md  (+54 more)
.1howto/: 1.md  menu  start.md
.archon/: config.yaml
.augment/: code_review_guidelines.yaml
.claude/: settings.local.json
.claude-commands/: batch-super-dev.md
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.husky/: pre-commit  pre-push
.kilocode/: README.md
.patch/: .gitkeep  README.md  patchflow.txt
_config/: files-manifest.csv  manifest.yaml  task-manifest.csv  tool-manifest.csv  workflow-manifest.csv
_experiment/: ideal-spec-grok.md
aura-project-docs/: investment-product-engine-prd.md  project-brief.md
bmad-copilot/: README.md  eslint.config.mjs  package.json
bmad-core/: core-config.yaml
bmad-web/: .env.example  .env.production.example  Dockerfile.api  Dockerfile.web  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  tsconfig.json  turbo.json
bmad_method/: README.md  __init__.py  cli.py  ide.py  installer.py  payload.py
bmm/: config.yaml
claude-web-examples/: PM-Project-Instructions.md  README.md
claudedocs/: installer-modification-reference.md  opencode-integration-reference.md
conversion-logs/: conversion-guide.md  session-2025-12-09-micro-steps-concepts.md  session-2025-12-31-content-production-workshop.md
core/: config.yaml
discovery-docs/: agents.md  bmad-kb.md  brief.md  creating-an-expansion-pack.md  frameworks.md  guiding-principles.md  mmao-research.md  opencode-architecture-deep-dive.md  templates.md
docs/: BMad-Method-V6-Quick-Start.md  BUNDLE_DISTRIBUTION_SETUP.md  ENTERPRISE-GITHUB-INTEGRATION.md  HOW-TO-VALIDATE-SPRINT-STATUS.md  OPTION-C-COMPLETION-REPORT.md  README.md  SPRINT-STATUS-AUDIT-2026-01-02.md  SPRINT-STATUS-VALIDATION-COMPLETE.md  V6_LOCAL_DEVELOPMENT.md  _STYLE_GUIDE.md  agent-customization-guide.md  autonomous-epic-processing.md  batch-processing-architecture.md  beginner-vibecoder-guide.md  bmm-workflow-status.yaml  docs-guide.md  (+21 more)
(+4373 files in other folders)
